--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Passero+One&family=Poppins&display=swap");
 
+:root {
+  --primary: #17064a;
+}
 * {
   margin: 0;
   padding: 0;
@@ -16,7 +19,7 @@ body {
   overflow: hidden;
   height: 100vh;
   width: 100vw;
-  background-color: #17064a;
+  background-color: var(--primary);
 }
 
 .kontainer .layer1 {
@@ -33,6 +36,7 @@ body {
   position: absolute;
   z-index: 3;
 }
+
 .layer1 img {
   max-width: 100%;
   height: auto;
@@ -46,6 +50,7 @@ body {
   width: 100vw;
   justify-content: space-between;
   padding: 10px 5%;
+  z-index: 5;
 }
 
 .logo {
@@ -73,7 +78,7 @@ body {
   font-size: 5em;
   font-weight: bolder;
   line-height: 106px;
-  color: #17064a;
+  color: var(--primary);
   text-shadow: -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white,
     1px 1px 0 white;
 }
@@ -101,14 +106,14 @@ body {
   transform: translateY(-4px);
 }
 .cta .btn-primary {
-  background-color: #17064a;
+  background-color: var(--primary);
   border: 1px solid white;
   margin-right: 20px;
 }
 .cta .btn-secondary {
   background-color: white;
-  border: 1px solid #17064a;
-  color: #17064a;
+  border: 1px solid var(--primary);
+  color: var(--primary);
 }
 
 .category {
@@ -119,14 +124,14 @@ body {
   overflow: hidden;
   height: 100vh;
   width: 100vw;
-  background-color: #17064a;
+  background-color: var(--primary);
 }
 .category-container {
-  width: 80%;
-  background-color: aqua;
+  width: 90%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
   height: 100vh;
   margin: auto;
 }
@@ -135,13 +140,14 @@ body {
   margin-top: 0 !important;
 }
 
-.category-title {
+#category .title {
   font-weight: 400;
   font-size: 3em;
   text-align: center;
 }
 
 .row {
+  width: 100%;
   padding-top: 2em;
   display: flex;
   justify-content: center;
@@ -150,18 +156,23 @@ body {
 }
 .col {
   flex: 0 0 15%;
-  box-sizing: border-box;
-  padding: 10px;
-  border: 1px solid red;
+  transition: all ease 0.5s;
+  -webkit-transition: all ease 0.5s;
+  -moz-transition: all ease 0.5s;
+  -ms-transition: all ease 0.5s;
+  -o-transition: all ease 0.5s;
+  cursor: pointer;
 }
-.col .img {
-  max-width: 100%;
-  width: 100%;
-  height: 100%;
-  border-radius: 10%;
-  background-color: white;
+
+.col:hover {
+  transform: scale(1.05);
+  -webkit-transform: scale(1.05);
+  -moz-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  -o-transform: scale(1.05);
 }
-img {
+
+.category-img img {
   width: 100%;
 }
 /* search */
@@ -174,11 +185,11 @@ img {
   width: 150px;
   padding: 10px 0px 10px 40px;
   border-radius: 9999px;
-  border: solid 1px #17064a;
+  border: solid 1px var(--primary);
   transition: all 0.2s ease-in-out;
   outline: none;
   opacity: 0.8;
-  color: #17064a !important;
+  color: var(--primary) !important;
 }
 
 .container-input svg {
@@ -191,4 +202,12 @@ img {
 .input:focus {
   opacity: 1;
   width: 250px;
+}
+
+.category-title {
+  font-size: 1.4em;
+  padding-bottom: 6px;
+}
+.category-desk {
+  font-size: 0.9em;
 }
